--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ input[type=button], input[type=submit], input[type=reset] {
 <p>I'm always open to discussing product<br /><span>design work or partnerships.</span></p>
 </div>
 <div class="fields">
-<form action="contact-form-handler.php" method="post" class="contact_form" id="contact_form">
+<form action="contact-form-handler.php" method="get" class="contact_form" id="contact_form">
 <div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
 <div class="empty_notice"><span>Please Fill Required Fields</span></div>
 <div class="first_row">
